[project]
name = "cohere-rag-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 既存
    "cohere>=5.15.0",
    "google-api-python-client>=2.178.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-storage>=3.3.0",
    "google-cloud-aiplatform>=1.69.0",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "google-auth",
    # 追加（requirements.txtにあった実行時依存）
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.8.2",
    # Cloud Run Jobs API用
    "google-cloud-run>=0.10.0",
    # 使っているスクリプトに合わせて（indexing等で使用）
    "pg8000>=1.31.1",
    "google-cloud-alloydb-connector>=1.7.0",
    "gspread>=6.2.1",
    "pandas>=2.3.2",
    "google-cloud-pubsub",
    "google-cloud-translate",
]
